--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="it">
     <head>
         <meta charset="utf-8" />
-        <title>Wordle</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
+        
+        <title>Wordle italiano</title>
+        <meta name="description" content="Versione di Wordle in italiano. Indovina la parola in 6 tentativi">
     </head>
     <body>
         <div id="app"></div>
