--- a/index.html
+++ b/index.html
@@ -5,7 +5,20 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
         
         <title>Wordle italiano</title>
-        <meta name="description" content="Versione di Wordle in italiano. Indovina la parola in 6 tentativi">
+        <meta name="description" content="Wordle in italiano. Indovina la parola in 6 tentativi.">
+
+        <!-- FB Meta Tags -->
+        <meta property="og:url" content="https://sebastianomorando.github.io/wordle-it/">
+        <meta property="og:type" content="website">
+        <meta property="og:title" content="Wordle - Indovina la parola">
+        <meta property="og:description" content="Wordle in italiano. Indovina la parola in 6 tentativi.">
+        <meta property="og:image" content="https://sebastianomorando.github.io/wordle-it//wordle_it_1200x630.png">
+
+        <!-- Twitter Meta Tags -->
+        <meta name="twitter:card" content="summary_large_image">
+        <meta property="twitter:domain" content="sebastianomorando.github.io">
+        
+        <script defer data-domain="sebastianomorando.github.io/wordle-it" src="https://plausible.io/js/plausible.js"></script>
     </head>
     <body>
         <div id="app"></div>
