--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
         
-        <title>Wordle italiano</title>
-        <meta name="description" content="Wordle in italiano. Indovina la parola in 6 tentativi.">
+        <title>VERBA | Wordle italiano</title>
+        <meta name="description" content="VERBA | Wordle in italiano. Indovina la parola in 6 tentativi.">
 
         <!-- FB Meta Tags -->
         <meta property="og:url" content="https://sebastianomorando.github.io/wordle-it/">
         <meta property="og:type" content="website">
-        <meta property="og:title" content="Wordle - Indovina la parola">
-        <meta property="og:description" content="Wordle in italiano. Indovina la parola in 6 tentativi.">
+        <meta property="og:title" content="VERBA | Wordle italiano - Indovina la parola">
+        <meta property="og:description" content="VERBA | Wordle in italiano. Indovina la parola in 6 tentativi.">
         <meta property="og:image" content="https://sebastianomorando.github.io/wordle-it//wordle_it_1200x630.png">
 
         <!-- Twitter Meta Tags -->
@@ -21,6 +21,17 @@
         <script defer data-domain="sebastianomorando.github.io/wordle-it" src="https://plausible.io/js/plausible.js"></script>
     </head>
     <body>
+        <script>
+            if (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches) {
+                document.body.classList.add('nightmode')
+                localStorage.setItem('darkmode', 'true')
+            }
+            
+            if (localStorage.getItem('nightmode') === 'true') {
+                document.body.classList.add('nightmode')
+            }
+
+        </script>
         <div id="app"></div>
         <div id="modal-root"></div>
         <script type="module" src="client/index.js"></script>
