animations, colorblind mode

--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
                 document.body.classList.add('nightmode')
             }
 
+            if (localStorage.getItem('colorblind') === 'true') {
+                document.body.classList.add('colorblind')
+            }
+
         </script>
         <div id="app"></div>
         <div id="modal-root"></div>
